[gd_scene load_steps=4 format=3 uid="uid://d2bkej1dakv6s"]

[ext_resource type="Script" uid="uid://ddkxgj5m43swv" path="res://scenes/CustomInvitesView/CustomInvitesView.gd" id="1"]
[ext_resource type="LabelSettings" uid="uid://dcb771ib3tfno" path="res://styles/ViewTitleLabelSettings.tres" id="2_u46xl"]
[ext_resource type="PackedScene" uid="uid://t8s6xh1ax7uy" path="res://scenes/UI/PrimaryButton.tscn" id="5"]

[node name="CustomInvitesView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
text = "Custom Invites"
label_settings = ExtResource("2_u46xl")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PayloadTextEdit" type="TextEdit" parent="VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Enter payload here"

[node name="SendInviteBtn" parent="VB" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Send Invite"
